attempt to fix scrollbar on members page

--- a/css/members.css
+++ b/css/members.css
@@ -12,7 +12,6 @@
 html,
 body {
     position: relative;
-    height: 100vh;
     width: 100%;
     background-color: #040a22;
     font-family: "Nunito", sans-serif;
